src/objects/Account_Scheduler_Sort_Field__mdt.object
<CustomObject>
    <description>Defines fields which can be used to sort Accounts on the Account Scheduler page</description>
    <fields>
        <fullName>Default_Sort_Order__c</fullName>
        <label>Default Sort Order</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Ascending</fullName>
                    <default>true</default>
                    <label>Ascending</label>
                </value>
                <value>
                    <fullName>Descending</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Field__c</fullName>
        <description>Field to use for sorting</description>
        <inlineHelpText>Field to use for sorting</inlineHelpText>
        <label>Field</label>
        <metadataRelationshipControllingField>Account_Scheduler_Sort_Field__mdt.Object__c</metadataRelationshipControllingField>
        <referenceTo>FieldDefinition</referenceTo>
        <relationshipLabel>Account_Scheduler_Sort_Fields</relationshipLabel>
        <relationshipName>Account_Scheduler_Sort_Fields</relationshipName>
        <required>true</required>
        <type>MetadataRelationship</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Object__c</fullName>
        <description>Object containing sort field (currently must be Account)</description>
        <inlineHelpText>Object containing sort field (currently must be Account)</inlineHelpText>
        <label>Object</label>
        <referenceTo>EntityDefinition</referenceTo>
        <relationshipLabel>Account_Scheduler_Sort_Fields</relationshipLabel>
        <relationshipName>Account_Scheduler_Sort_Fields</relationshipName>
        <required>true</required>
        <type>MetadataRelationship</type>
    </fields>
    <fields>
        <fullName>Precedence__c</fullName>
        <description>Ordinal value to determine order in which sort fields are displayed in in Account Scheduler</description>
        <inlineHelpText>Ordinal value to determine order in which sort fields are displayed in in Account Scheduler</inlineHelpText>
        <label>Precedence</label>
        <precision>4</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Account Scheduler Sort Field</label>
    <pluralLabel>Account Scheduler Sort Fields</pluralLabel>
    <validationRules>
        <fullName>Account_Fields_Only</fullName>
        <active>true</active>
        <errorConditionFormula>Object__r.DeveloperName != &quot;Account&quot;</errorConditionFormula>
        <errorDisplayField>Object__c</errorDisplayField>
        <errorMessage>Only Account fields are supported</errorMessage>
    </validationRules>
</CustomObject>